apps/cortex-system/cortex-mcp-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    field.cattle.io/publicEndpoints: '[{"addresses":["10.88.145.200"],"port":443,"protocol":"HTTPS","serviceName":"cortex-system:cortex-mcp-server","ingressName":"cortex-system:cortex-mcp-ingress","hostname":"cortex-mcp.cortex-io.dev","path":"/","allNodes":false}]'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: cortex-mcp-server
  name: cortex-mcp-ingress
  namespace: cortex-system
spec:
  ingressClassName: traefik
  rules:
  - host: cortex-mcp.cortex-io.dev
    http:
      paths:
      - backend:
          service:
            name: cortex-mcp-server
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cortex-mcp.cortex-io.dev
    secretName: cortex-mcp-tls
